# nkust-homework

./: .gitignore  README.md  TOC.md  generate-toc.sh  index.html  package.json
semester-3/big-data/20231118-homework2/: README.md  build.sh  pyproject.toml
semester-3/big-data/20231118-homework2/docs/: build.py  main.typ
semester-3/big-data/20231118-homework2/src/hw2/: __init__.py  __main__.py  cli.py  crawler.py
semester-3/big-data/20231130-nkust-news-title/: 01-nkust-crawler.py  02-ic-img-crawler.py  03-xpath.py  README.md  pyproject.toml
semester-3/big-data/20231207-sqlite/: README.md  pyproject.toml  test.db
semester-3/big-data/20231207-sqlite/src/: main.py
semester-3/big-data/20231217-homework3/: README.md  pyproject.toml
semester-3/big-data/20231217-homework3/src/: main.py
semester-3/big-data/20231217-homework3/src/hw3/: __init__.py  extractor.py  migrate.py  (+1 more)
semester-3/big-data/20231227-homework4/: .gitignore  README.md  pyproject.toml
semester-3/python-iii/flask-231101/: 02_routing.py  04_variable.py  pyproject.toml
semester-3/python-iii/flask-231101/templates/: index.html  variable.html
semester-3/python-iii/flask-231129/: README.md  main.py  orm.py  pyproject.toml  session.py
semester-3/python-iii/flask-231129/templates/: form.html
semester-3/python-iii/flask-231206/: README.md  pyproject.toml
semester-3/python-iii/flask-231213/: README.md  pyproject.toml
semester-3/python-iii/flask-231213/src/: 03_query.py  04_find_special.py  05_find_special_2.py
semester-3/python-iii/flask-231220/: README.md  pyproject.toml
semester-3/python-iii/flask-231220/src/: 01_connect_then_insert.py  01_in_and_not_in.py  02_find.py
semester-3/python-iii/kkbox-231227/: README.md  pyproject.toml
semester-4/ai/impl/: README.md  pyproject.toml
semester-5/big-data-analysis/: analyze.ipynb  hw2-plot.ipynb  missing-data.csv  pyproject.toml
semester-5/big-data-business-decision/ch4impl/: ch4impl-02.ipynb  ch4impl.ipynb  cust-data.csv  homework.ipynb  pyproject.toml
semester-5/big-data-business-decision/ch4impl/.ipynb_checkpoints/: ch4impl-checkpoint.ipynb
semester-5/big-data-business-decision/hw06impl/: homework.ipynb  pyproject.toml
semester-5/big-data-business-decision/hw07impl/: homework.ipynb  pyproject.toml
semester-5/big-data-implementation/homework-241014/: 241011-01.ipynb  Employee data.csv  pyproject.toml
semester-5/business-platform-design/ch10/: Online_Retail001.xlsx  pyproject.toml
semester-5/business-platform-design/ch10/course/: 101-0CustomeraggRFMcut4v1.ipynb  101-1CustomeraggRFMcut2v1.ipynb  102CustomeraggRFMKmeansfinal11v1.ipynb
semester-5/business-platform-design/ch11/: 110association_basic5_pd.ipynb  110association_basic5_pl.ipynb  111association6.ipynb  112ProductRecommendation3.ipynb  Groceries_dataset.csv  Online_Retail001.xlsx  hw11.ipynb  pyproject.toml
semester-5/business-platform-design/ch13/: 130treegraph.ipynb  130treegraph_marketing.ipynb  131RogicandRandomforest9.ipynb  132PredictingEngagementtemp8.ipynb  132PredictingEngagementtemp8keras.ipynb  contract.csv  pyproject.toml
semester-5/business-platform-design/ch14/: 140corrandreg1111v1.ipynb  141LinearRegression6.ipynb  142bostonpricing6.ipynb  143CustomerLifetimeValue7.ipynb  hello.py  pyproject.toml
semester-5/business-platform-design/hw10/: hw10-polars.ipynb  pyproject.toml
semester-5/business-platform-design/midexam/: .gitignore  pyproject.toml
semester-6/financial/hw1-loan-amortization-schedule/: .gitignore  README.md  calculate.py  main.py  pyproject.toml  streamlit_app.py  structure.py  test_calculate.py  test_structure.py
semester-6/financial/hw2-ch3-analysis-tool/: .gitignore  main.py  pyproject.toml
semester-6/financial/hw2-ch3-analysis-tool/data/: 現金流量表.xlsx  綜合損益表.xlsx  調整股價.xlsx  資產負債表.xlsx
semester-6/machine-learning/: .gitignore  0311-preprocessing.ipynb  0311-preprocessing.py  0325-logistic-regression.ipynb  0404-svm-model.ipynb  0506-data-cleaning.ipynb  0506-evaluate-model.ipynb  0513-evaluate-model-2.ipynb  0527-integrated-learning.html  0527-integrated-learning.ipynb  0527-optimization.ipynb  cross_validation_results.csv  devenv.nix  final-exam.html  final-exam.ipynb  main.py  pyproject.toml
semester-6/machine-learning/0311-preprocessing/: Dockerfile  app.py
semester-6/marketing/00-pandas-basic/: CLAUDE.md  data_conversion_basic.ipynb  data_conversion_basicv2.ipynb  pandas_basic.ipynb  pyproject.toml
semester-6/marketing/01-scrapers/: 00-requests.ipynb  01-selenium.ipynb  02-ptt.ipynb  03-ptt-packages.ipynb  04-ptt-chatgpt.py  05-ptt-data-cleaning.ipynb  05-shopee-data-cleaning.ipynb  pyproject.toml
semester-6/marketing/01-scrapers/datasets/: 蝦皮_運動內衣_商品資料.csv  蝦皮_運動內衣_留言資料.csv
semester-6/marketing/01-scrapers/homeworks/: article-detail.csv  comment-detail.csv  hw1.py  hw2.py  hw2_notebook.py  hw3.py  hw4.ipynb  hw5.ipynb  result.csv
semester-6/marketing/01-scrapers/ivan_ptt/: Ivan_ptt.py  __init__.py  ivan_ptt.py  ivan_ptt_02.py
semester-6/marketing/01-scrapers/output/: PTT_NBA1.csv  PTT_NBA2.csv  PTT_運動內衣_onepage資料clear.csv  PTT_運動內衣_onepage資料留言內容.csv  gossiping_test.csv  iphone16_articles_20250331_103925.csv  iphone16_articles_20250331_103925.json  underwear_test.csv  蝦皮_運動內衣_【處理後】商品資料.csv  蝦皮_運動內衣_【處理後】留言資料.csv
semester-6/marketing/02-share-of-voice/: basic_text_processing.ipynb  pyproject.toml  share_of_voice.ipynb
semester-6/marketing/02-share-of-voice/assets/: movie_dict.txt  underwear_test_clear.csv  user_dict.txt
semester-6/marketing/02-share-of-voice/homework/: hw02.ipynb  remove_words.json  stopwords.txt
semester-6/marketing/03-brand-keywords/: 01-jieba-word-segmentation.ipynb  02-custom-keyword-analysis.ipynb  pyproject.toml
semester-6/marketing/03-brand-keywords/dataset/: allmovie_keywordscore.csv  allunderwsear_keywordscoredemo.csv
semester-6/marketing/03-brand-keywords/dict/: remove_words.json  stopwords.txt  user_dict.txt
semester-6/marketing/03-brand-keywords/homework/: PTT_運動內衣_所有資料1000.csv  brand_keyword.csv  dict.txt.big  hw03.ipynb  remove_words.json  stopwords.txt  tfidf_df(2).csv
(+1291 files in other folders)
