[project]
name = "big-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "polars>=1.8.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.8",
]
