[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "ruff>=0.11.7",
]
