[project]
name = "20231130-nkust-news-title"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pan93412", email = "pan93412@gmail.com" }
]
dependencies = [
    "playwright>=1.40.0",
    "tqdm>=4.66.1",
    "httpx>=0.25.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "mypy>=1.7.1",
    "types-tqdm>=4.66.0.5",
]

[tool.hatch.metadata]
allow-direct-references = true
