[project]
name = "hw4"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pan93412", email = "pan93412@gmail.com" }
]
dependencies = [
    "httpx>=0.26.0",
    "loguru>=0.7.2",
    "selectolax>=0.3.17",
    "aiofiles>=23.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
]

[tool.hatch.metadata]
allow-direct-references = true
