[project]
name = "flask1220"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pan93412", email = "pan93412@gmail.com" }
]
dependencies = [
    "fastapi>=0.105.0",
    "pymongo>=4.6.1",
    "streamlit>=1.29.0",
    "watchdog>=3.0.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true
