[project]
name = "ch4impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlxtend>=0.23.1",
    "notebook>=7.2.2",
    "pandas[output-formatting,performance,plot]>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
