[project]
name = "ch9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pandas[excel,output-formatting,performance,plot]>=2.2.3",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
