[project]
name = "hw10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlxtend>=0.23.1",
    "notebook>=7.2.2",
    "pandas[excel,output-formatting,performance,plot]>=2.2.3",
    "polars[numpy,graph,pyarrow,plot,pandas,excel]>=1.10.0",
    "scikit-learn>=1.5.2",
]
