[project]
name = "ch13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pandas[output-formatting,performance,plot]>=2.2.3",
    "scikit-learn>=1.5.2",
    "tensorflow>=2.18.0",
]
