[project]
name = "hw10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvplot>=0.11.1",
    "notebook>=7.2.2",
    "polars[numpy,graph,pyarrow,plot]>=1.10.0",
    "pyarrow>=17.0.0",
    "pyparsing>=3.2.0",
    "scikit-learn>=1.5.2",
]
