[project]
name = "analysis-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas[excel]>=2.2.3",
]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "ruff>=0.11.2",
]
