[project]
name = "00-pandas-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.3.3",
    "ruff>=0.11.0",
]
