[project]
name = "01-scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.30.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "ruff>=0.11.2",
]
