[project]
name = "03-brand-keywords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jieba>=0.42.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "notebook>=7.4.1",
    "ruff>=0.11.7",
]
